# The-Model-Thinker

./: README.md  main.py  pyproject.toml
models/basic/: linear_models.py
models/collective/collective_action/: README.md  collective_action_simple.py
models/collective/condorcet_jury/: README.md  condorcet_jury.py  condorcet_simple.py  demo.py  test.py
models/collective/diversity_prediction/: README.md  demo.py  diversity_prediction.py  diversity_simple.py  test.py
models/collective/mechanism_design/: README.md  mechanism_design_simple.py
models/collective/random_walk/: README.md  random_walk_simple.py
models/collective/signaling/: README.md  signaling_simple.py
models/collective/threshold/: README.md  threshold_simple.py
